--- a/bookShelv.css
+++ b/bookShelv.css
@@ -1,4 +1,68 @@
-*{
-    margin: 0px;
-    padding: 0px;
-}
+  * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        html, body{
+            overflow-x: hidden;
+            height: 100%;
+        }
+        body img:hover {
+            cursor: pointer;
+        }
+
+        #secondnav {
+            display: flex;
+            justify-content: space-between;
+            padding: 5px 20px;
+        }
+
+        .box {
+            width: 600px;
+            height: 8px;
+            background-color: white;
+            border-radius: 30px;
+            display: flex;
+            align-items: center;
+            padding: 20px;
+            background-color: rgb(226, 229, 233);
+        }
+
+        .box>img {
+            font-size: 20px;
+            width: 27px;
+            padding-right: 10px;
+        }
+
+        .box>input {
+            flex: 1;
+            height: 40px;
+            border: none;
+            outline: none;
+            font-size: 18px;
+
+            background-color: rgb(226, 229, 233);
+        }
+
+        .secondbox {
+            width: 265px;
+            background-color: white;
+        }
+
+        .secondbox:hover {
+            background-color: rgb(226, 229, 233);
+            cursor: pointer;
+        }
+
+        #thirdnav {
+            padding-left: 150px;
+            margin-top: 20px;
+            display: flex;
+           
+        }
+        #thirdnav h3:hover{
+            cursor: pointer;
+        }
+        #thirdnav h3{
+            margin-right: 40px;
+        }
