--- a/shoppinglist.css
+++ b/shoppinglist.css
@@ -158,14 +158,18 @@ display: flex;
     height: 67px;
     padding-top: 11px;
 }
-.bottom-div > div{
-    border-bottom: 1px solid lightgrey;
+
+.left-div > div:nth-of-type(1){
+    padding-right: 8%;
 }
 .bottom-div > div:nth-of-type(2){
     
     display: flex;
     justify-content: space-between;
     font-weight: bold;
+    border-top: 2px dotted lightgray;
+    border-bottom: 2px dotted lightgray;
+    padding: 2%;
 }
 
 .bottom-div > div:nth-of-type(2) > *{
@@ -189,19 +193,20 @@ width: 32px;
 .home > .del:nth-of-type(1) img{
    width: 40px;
    padding-left: 30px;
+   cursor: pointer;
 }
 .home{
     display: flex;
-    
-    width: 58%;
+    width: 32%;
     margin: 0 auto;
-    justify-content:space-around;
+    justify-content: space-between;
     padding-bottom: 5px;
     margin-bottom: 25px;
     height: 67px;
     padding-top: 11px;
-
+    border-bottom: 1px solid lightgray;
 }
+
 
 .home > .del2:nth-of-type(2) img{
     width: 40px;
@@ -273,9 +278,30 @@ width: 32px;
     cursor: pointer;
 }
 
-    
+  .pincode-wrapper{
+    display: flex;
+    flex-flow: column;
+    margin-top: 2%;
+    width: 33%;
+    margin: 0 auto;
+    padding-left: 13px;
+  }  
 
+  .pincode-wrapper input {
+    width: 95%;
+    height: 27px;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    cursor: pointer;
+  }
 
+  .pincode-wrapper img {
+    cursor: pointer;
+  }
+
+  .display-none {
+    display: none;
+  }
 
     
 /* nav */
