--- a/landpage.css
+++ b/landpage.css
@@ -174,6 +174,7 @@ body {
         }
         .lower1{
             padding: 50px 15px;
+            height: 370px;
         }
         .heading1{
             font-size: 40px;
@@ -201,6 +202,7 @@ body {
         #lower6{
            background-color: yellow; 
         }
+        
         #three{
             display: flex;
             width: 100%;
@@ -376,7 +378,7 @@ body {
             /* transform: translate(-400px); */
             display: none;
         }
-
+       
         .menu{
             list-style: none;
             padding: 0;
