--- a/create.css
+++ b/create.css
@@ -263,7 +263,7 @@ td a{
 }
 
 .secondbox {
-    width: 265px;
+    width: 20px;
     background-color: white;
 }
 
@@ -283,4 +283,44 @@ td a{
 }
 #thirdnav h3{
     margin-right: 40px;
+}
+
+
+@media screen and (min-width:700px) and (max-width: 900px){
+   
+    #footer{
+        display: flex;
+        flex-direction: column ;
+        width: 100%;
+        gap:25px;
+        margin-top: 40px;
+        background-color: #f5f5f5;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    }
+    #footer div{
+        width:100%;
+        margin: 0px;
+        padding-right: 30px;
+        padding-left: 50px;
+    }
+
+}
+@media screen and (min-width:0px) and (max-width: 700px){
+    
+    #footer{
+        display: flex;
+        flex-direction: column ;
+        width: 100%;
+        gap:25px;
+        margin-top: 40px;
+        background-color: #f5f5f5;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+    }
+    #footer div{
+        width:100%;
+        margin: 0px;
+        padding-right: 30px;
+        padding-left: 50px;
+    }
+
 }
