--- a/landpage.css
+++ b/landpage.css
@@ -596,7 +596,7 @@ body {
             transform: scale(1.1);
         }
 
-        @media screen and (min-width:700px) and (max-width: 900px){
+        @media screen and (min-width:601px) and (max-width: 900px){
             #imgdetail{
                 display: grid;
                 grid-template-columns: repeat(2,1fr);
@@ -636,9 +636,25 @@ body {
                 padding-right: 30px;
                 padding-left: 50px;
             }
+            #log{
+                display: none;
+                
+            }
+            .secondbox {
+                width: 60px;
+                background-color: white;
+            }
 
+          
+            #secondbox{
+                width: 10px;
+            }
+            #okokok{
+                margin-right: 3px;
+            }
+            
         }
-        @media screen and (min-width:0px) and (max-width: 700px){
+        @media screen and (min-width:0px) and (max-width: 600px){
             #imgdetail{
                 display: grid;
                 grid-template-columns: repeat(1,1fr);
@@ -677,6 +693,13 @@ body {
                 margin: 0px;
                 padding-right: 30px;
                 padding-left: 50px;
+            }
+            #log{
+                display: none;
+            }
+            .secondbox {
+                width: 60px;
+                background-color: white;
             }
 
         }
