--- a/checkout.css
+++ b/checkout.css
@@ -71,7 +71,9 @@ body {
     color: white;
     width: 14%;
     height: 40px;
+    cursor: pointer;
 }
+
 
 .main-div {
     display: flex;
@@ -288,7 +290,7 @@ justify-content: space-between;
     color: white;
     width: 17%;
     height: 40px;
-    
+    cursor: pointer;
 }
 .remove *{
     margin: 0 auto;
