--- a/create.css
+++ b/create.css
@@ -4,7 +4,10 @@
     display: flex;
 }
 
-
+*{
+    margin:0%;
+    padding: 0%;
+}
 
 
 .signup{
@@ -15,18 +18,6 @@
 }
 
 
-/* .signup-box{
-    position: absolute;
-    top:0%;
-    left:0%;
-    width:900px;
-    padding:40px;
-    transform: translate(0%,0%);
-    background: white;
-    box-sizing: border-box;
-    box-shadow: 0 15px 25px rgba(0,0,0,.6);
-    
-} */
 
 .user-box {
     position:relative;
@@ -45,23 +36,7 @@
     outline: none;
     background: transparent;
 }
-/* .user-box label{
-    position:absolute;
-   top:30%;
-    left:0%;
-    padding:5px 0px;
-    font-size:16px;
-    color:black;
-    pointer-events:none;
-    transition: .5s;
-   border:1px solid blue
-}
- .user-box input:focus ~ label, .user-box input:valid ~ label{
-    top:-20%;
-    left:0;
-    color:red;
-    font-size: 8px;
-} */
+
 
 
 
